--- a/.github/workflows/server deploy.yml
+++ b/.github/workflows/server deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Server
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   deploy:
@@ -23,9 +23,12 @@ jobs:
         run: |
           ssh ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} << 'EOF'
             cd ${{ secrets.SSH_PATH }}
-            git pull origin main
+            git fetch origin
+            git checkout master
+            git pull origin master
             source venv/bin/activate
             pip install -r requirements.txt
             python manage.py migrate
+
             sudo systemctl restart gunicorn
           EOF
